Attempting fix (hack) for collapsed Bootstrap menu

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,3 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 
-.dropdown-backdrop {
-    position: static !important;
-}
