--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -69,3 +69,7 @@ div {
     list-style: square;
   }
 }
+
+.dropdown-backdrop {
+    position: static !important;
+}
